--- a/.github/workflows/retype-action.yml
+++ b/.github/workflows/retype-action.yml
@@ -14,4 +14,7 @@ jobs:
       - uses: retypeapp/action-build@latest
       - uses: retypeapp/action-github-pages@latest
         with:
+          token: ${{ secrets.GH_PAT || github.token }}
           update-branch: true
+        env:
+          GH_PAT: ${{ secrets.GH_PAT || github.token }}
