--- a/.github/workflows/retype-action.yml
+++ b/.github/workflows/retype-action.yml
@@ -17,4 +17,4 @@ jobs:
           token: ${{ secrets.GH_PAT || github.token }}
           update-branch: true
         env:
-          GH_PAT: ${{ secrets.GH_PAT || github.token }}
+          INPUT_GITHUB_TOKEN: ${{ secrets.GH_PAT || github.token }}
