--- a/.github/workflows/retype-action.yml
+++ b/.github/workflows/retype-action.yml
@@ -8,10 +8,17 @@ on:
 jobs:
   publish:
     name: Publish to retype branch
+
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: retypeapp/action-build@latest
+
       - uses: retypeapp/action-github-pages@latest
         with:
           update-branch: true
